Fix blob, add z-index example

--- a/websitev2/style.css
+++ b/websitev2/style.css
@@ -99,6 +99,6 @@ section {
 
 .blob-motion {
   position: absolute;
-  transform: translateY(-20%);
+  transform: translateY(10%);
   z-index: 0;
 }
